Css updates + One problem: Fixed header position causes first note item to be hidden underneath

--- a/lists/src/app/list/list.component.css
+++ b/lists/src/app/list/list.component.css
@@ -12,7 +12,6 @@
                                   supported by Chrome and Opera */
     border-bottom: 3px solid #667A8C;
     min-height: 40px;
-    text-indent: 15px;
 }
 
 .tile:hover {
@@ -23,15 +22,46 @@
     color: black;
 }
 
-.username {
-    font-size: 12px;
-    color: #000;
-    opacity: .2;
-    float: right;
+.checkmarkDiv {
+    width: 5%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+    text-align: left;
 }
 
-.glyphicon-remove{
-    float: right;
+.itemDiv {
+    width: 75%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+    text-align: left;
+    text-indent: 15px;
+}
+
+.authorDiv {
+    width: 15%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+    font-size: 12px;
+    color: #000;
+    opacity: .5;
+    text-align: right;
+}
+
+.glyphDiv {
+    width: 5%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+    text-align: right;
+}
+
+.clear {
+    width: 100%;
+    height: 0px;
+    clear: both;
 }
 
 .glyphicon-ok{
@@ -50,6 +80,7 @@
     color:green;
     opacity: 1;
 }
+
 .glyphicon:hover {
     text-decoration: none;
 }
@@ -77,11 +108,22 @@
     border-bottom: 2px solid #464133;
 }
 
+/* Div containing the collab code */
 #collab {
-    width:50%;
+    width:100%;
     min-height: 10px;
     background-color: transparent;
     margin-left: 15px;
+    font-family: 'Cantarell', sans-serif;
+    color:#FFF;
+}
+
+/* Collab Code text */
+#collabcode {
+    font-weight: bold;
+    font-style: none;
+    color: #1F1D16;
+    font-size: 18px;
 }
 
 li {
@@ -113,7 +155,7 @@ li {
     width: 100%;
     overflow-y: auto;
     background-color: transparent;
-    height: calc(100% - 134px);
+    min-height: calc(100% - 134px);
     margin-top:134px;
 }
 
@@ -137,3 +179,17 @@ li {
 ::-webkit-scrollbar-thumb {
       background-color: rgba(0, 0, 0, .3); 
 } /* Scrollbar scrolling part */
+
+@media only screen and (max-width: 600px) {
+    .tile { font-size: 14px; }
+    .username { font-size: 12px; }
+    #header { width: 70%; position: fixed; left: 30%; }
+    #collab { width:100%; margin: 5px; text-align: center; }
+    .nameDisplay { font-size: 28px; }
+    #wrapper { height: calc(100% - 131px); margin-top:131px; width: 70%; position: fixed; left: 30%; }
+    .content { width: 100%; height: calc(100% - 70px) }
+    .checkmarkDiv { width: 10%; }
+    .itemDiv { width: 90%; }
+    .authorDiv { width: 90%; }
+    .glyphDiv { width: 10% }
+}
