--- a/lists/src/app/sidebar/sidebar.component.css
+++ b/lists/src/app/sidebar/sidebar.component.css
@@ -26,8 +26,24 @@
     z-index: 10;
 }
 
-.glyphicon-remove{
-    float: right;
+.noteText {
+    width: 90%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+}
+
+.gliphy { 
+    width: 10%; 
+    min-height: auto; 
+    background-color: transparent; 
+    float: left; 
+}
+
+.clear {
+    width: 100%;
+    height: 0px;
+    clear: both;
 }
 
 .tile{
@@ -39,4 +55,10 @@
 
 .tile:hover {
     background-color: #D8AE24;
+}
+
+@media only screen and (max-width: 600px) {
+    .btn { width: 30%; }
+    .form-control { width: 30%; }
+    .tile { text-align: left; }
 }
